fixed scrollbar visibiity

--- a/public/style.css
+++ b/public/style.css
@@ -943,6 +943,47 @@ video {
   transition-duration: 700ms;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+.reduce-scroll-x::-webkit-scrollbar-thumb {
+  width: 6px;
+}
+
+.no-scrollbar::-webkit-scrollbar-thumb {
+  background: transparent;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none !important;
+}
+
+.on-scrollbar::-webkit-scrollbar-thumb {
+  background: #dee0e241;
+}
+
+.on-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: #d9e0e965;
+}
+
+.on-scrollbar {
+  -ms-overflow-style: initial;
+  scrollbar-width: auto;
+}
+
 .placeholder\:text-\[\#656f79\]::-moz-placeholder {
   --tw-text-opacity: 1;
   color: rgb(101 111 121 / var(--tw-text-opacity));
