--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,46 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.reduce-scroll-x::-webkit-scrollbar-thumb {
+    width: 6px;
+}
+
+.no-scrollbar::-webkit-scrollbar-thumb {
+    background: transparent;
+}
+
+.no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none !important;
+}
+
+.on-scrollbar::-webkit-scrollbar-thumb {
+    background: #dee0e241;
+}
+
+.on-scrollbar::-webkit-scrollbar-thumb:hover {
+    background: #d9e0e965;
+}
+
+.on-scrollbar {
+    -ms-overflow-style: initial;
+    scrollbar-width: auto;
+}
+
+@layer utilities {
+    @variants responsive {
+
+        /* Hide scrollbar for Chrome, Safari and Opera */
+        .no-scrollbar::-webkit-scrollbar {
+            display: none;
+        }
+
+        /* Hide scrollbar for IE, Edge and Firefox */
+        .no-scrollbar {
+            -ms-overflow-style: none;
+            /* IE and Edge */
+            scrollbar-width: none;
+            /* Firefox */
+        }
+    }
+}
